tdf#156155 sw: export draw:fill to top-level ODF graphic styles

The default for XATTR_FILLSTYLE for Writer flys differs from the default
in the item pool, which is intended for svx shapes/SdrObjects.

This is implemented with an intermediate mpDfltFrameFormat but it needs
some special handling so the attribute ends up in the styles.xml.

Change-Id: I8f369809a9f3b7e85a8bc7ad5d309dbc3cd6ccfe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153970
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 9410a22cdbe7c977206456218c75683a305ef79e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153994
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>